--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,18 +2,30 @@
     margin: 0;
     font-family: 'Work Sans';
 }
-.header{
-    background: url(../images/banner/banner1.png);
+.bannar-container{
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/banner/banner1.png);
+    background-repeat: no-repeat;
     background-size: cover;
-    width: 1600px;
-    height: 808px;
-    left: 1600px;
-    top: 808px;
-
-}
-.banner-section{
     display: flex;
-    text-align: right;
+    justify-content: center;
+    align-items: center;
+    text-align: end;
+}
+.banner-details{
+    margin: 216px 230px 364px 845px;
+}
+.new-btn{
+    padding: 20px 40px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #dd5050;
+    border-radius: 5px;
+    border: 0;
 }
 
 .task{
@@ -33,6 +45,7 @@
     font-size: 16px;
     line-height: 26px;
     color: #444343;
+    margin-bottom: 16px;
 }
 .content-tips{
     font-weight: 400;
@@ -112,4 +125,11 @@ footer{
 }
 .footer-content a{
     text-decoration: none;
+}
+
+input{
+    padding: 15px 10px;
+    border: 0;
+    border-radius: 5px;
+    margin: 5px 0;
 }
